--- a/devs.html
+++ b/devs.html
@@ -42,8 +42,8 @@
                     <span>PHP</span>
                 </label>
                 <label>
-                    <input id="phyton" name="phyton" type="checkbox" onchange="filter()" checked/>
-                    <span>Phyton</span>
+                    <input id="python" name="python" type="checkbox" onchange="filter()" checked/>
+                    <span>Python</span>
                 </label>
             </div>
         </section>
@@ -589,6 +589,8 @@
             </div>
         </div>
     </section>
+    <div id="modal-profile" class="modal-container">
+    </div>
     <script src="./js/app.js"></script>
 </body>
 </html>
